--- a/env.example
+++ b/env.example
@@ -1,5 +1,7 @@
 PORT=3030
 
+DB_HOST=host.docker.internal
+
 # DB 연결 정보는 헤더(x-db-host, x-db-port, x-db-name, x-db-user, x-db-password)로 전달됩니다.
 # 서버 시작 시 DB 연결이 필요 없습니다.
 
