--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
     image: sync-ace
     container_name: syncace
     build: ./
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     restart: always
     env_file: ./.env
     ports:
