Add monitoring features and Telegram alerts for database errors
- Introduced monitoring configuration in .env for enabling monitoring and setting thresholds.
- Added API endpoint in server.js to retrieve monitoring status.
- Implemented database error alerts via Telegram in error-handler.js and server.js for unhandled database errors.
- Enhanced WebSocket service to optimize connection maintenance and error logging for high connection counts.

--- a/.env
+++ b/.env
@@ -6,3 +6,14 @@ DB_HOST=host.docker.internal
 # 서버 시작 시 DB 연결이 필요 없습니다.
 
 
+# 모니터링 활성화
+MONITORING_ENABLED=true
+MONITORING_CHECK_INTERVAL=60000
+MONITORING_CONNECTION_THRESHOLD=1000
+MONITORING_MEMORY_THRESHOLD_MB=500
+MONITORING_MEMORY_CRITICAL_MB=1000
+
+# Telegram 설정
+TELEGRAM_ENABLED=true
+TELEGRAM_BOT_TOKEN=8483466040:AAF-KkAwq-HSXndCDVA3XDU_fzzQrxpmii0
+TELEGRAM_CHAT_ID=coolsyncro_bot
