--- a/.env
+++ b/.env
@@ -15,5 +15,5 @@ MONITORING_MEMORY_CRITICAL_MB=1000
 
 # Telegram 설정
 TELEGRAM_ENABLED=true
-TELEGRAM_BOT_TOKEN=AAFXf0-Bs6OzBzFDkJH6W0E7IKqauATaRBI
-TELEGRAM_CHAT_ID=8483466040
+TELEGRAM_BOT_TOKEN=8483466040:AAF-KkAwq-HSXndCDVA3XDU_fzzQrxpmii0
+TELEGRAM_CHAT_ID=8340106887
