Implement Telegram command handling and enhance monitoring service
- Added support for Telegram command handling with polling enabled through the new `startTelegramPolling` function in `server.js`.
- Updated the `.env` file to include `TELEGRAM_POLLING_ENABLED` for enabling command reception.
- Enhanced the `sendTelegramMessage` function to utilize the command handler, falling back to direct API calls if necessary.
- Updated `TELEGRAM_SETUP.md` to reflect new command usage and configuration details.

--- a/.env
+++ b/.env
@@ -17,3 +17,4 @@ MONITORING_MEMORY_CRITICAL_MB=1000
 TELEGRAM_ENABLED=true
 TELEGRAM_BOT_TOKEN=8483466040:AAF-KkAwq-HSXndCDVA3XDU_fzzQrxpmii0
 TELEGRAM_CHAT_ID=8340106887
+TELEGRAM_POLLING_ENABLED=true
