--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
     "build": "node -e \"require('./src/utils/build-info').saveBuildDate()\" && node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "node scripts/auto-commit.js",
+    "git:auto": "node scripts/auto-commit.js"
   },
   "keywords": [],
   "author": "",
