--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "node-telegram-bot-api": "^0.66.0",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
