--- a/nginx-websocket-config.conf
+++ b/nginx-websocket-config.conf
@@ -23,6 +23,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # ⚠️ 502 에러 방지를 위한 타임아웃 설정 (중요!)
+        proxy_read_timeout 300s;      # 프록시가 업스트림 서버로부터 응답을 읽는 최대 시간
+        proxy_connect_timeout 300s;   # 프록시가 업스트림 서버에 연결하는 최대 시간
+        proxy_send_timeout 300s;      # 프록시가 업스트림 서버로 요청을 보내는 최대 시간
+        
+        # Keep-alive 설정
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
     }
 
     # WebSocket 경로 프록시 설정 (중요!)
@@ -59,6 +68,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # ⚠️ 502 에러 방지를 위한 타임아웃 설정 (중요!)
+        proxy_read_timeout 300s;      # 프록시가 업스트림 서버로부터 응답을 읽는 최대 시간
+        proxy_connect_timeout 300s;   # 프록시가 업스트림 서버에 연결하는 최대 시간
+        proxy_send_timeout 300s;      # 프록시가 업스트림 서버로 요청을 보내는 최대 시간
+        
+        # Keep-alive 설정
+        proxy_set_header Connection "";
+        proxy_http_version 1.1;
     }
 }
 
