개선: PostgreSQL 연결 풀 설정 최적화
- pool.max 기본값을 400에서 50으로 조정 (PostgreSQL 서버 한계 고려)
- 각 데이터베이스당 최대 연결 수를 50으로 제한하여 여러 DB 사용 시 서버 한계 초과 방지
- DB_POOL_MAX, DB_POOL_IDLE 환경 변수 지원 (env.example에 문서화)
- idle 시간은 이미 5초로 최적화되어 있음

CONNECTION_POOL_ANALYSIS.md의 권장사항 반영

--- a/env.example
+++ b/env.example
@@ -5,4 +5,13 @@ DB_HOST=host.docker.internal
 # DB 연결 정보는 헤더(x-db-host, x-db-port, x-db-name, x-db-user, x-db-password)로 전달됩니다.
 # 서버 시작 시 DB 연결이 필요 없습니다.
 
+# PostgreSQL 연결 풀 설정
+# 각 데이터베이스당 최대 연결 수 (기본값: 50)
+# PostgreSQL 서버의 max_connections(100)를 고려하여 여러 DB 사용 시 서버 한계 초과 방지
+DB_POOL_MAX=50
+
+# 유휴 연결 유지 시간 (밀리초, 기본값: 5000 = 5초)
+# 유휴 연결을 빠르게 정리하여 연결 수 관리
+DB_POOL_IDLE=5000
+
 
